--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "cookie-server",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.9.1",
+    "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "socket.io": "^4.6.1"
   },
