--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
