--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "cookie-server",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "nodemon": "nodemon dist",
+    "watch": "tsc -w",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
