Migration to TS

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "nodemon": "nodemon dist",
     "watch": "tsc -w",
+    "dev": "tsc -w & nodemon dist",
     "build": "tsc -p ."
   },
   "dependencies": {
