--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "~1.11.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
