--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.197",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
