--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/mongo-adapter": "^0.3.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
@@ -23,17 +24,24 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "firebase-tools": "^12.5.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@eslint/create-config": "0.4.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.2.2"
   }
 }
