--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
         "express": "~4.16.1",
         "firebase-tools": "^12.5.3",
         "http-errors": "~1.6.3",
-        "jade": "~1.11.0",
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
@@ -34,6 +33,7 @@
         "mongoose": "^7.0.3",
         "morgan": "~1.9.1",
         "multer": "^1.4.5-lts.1",
+        "pug": "^3.0.2",
         "socket.io": "^4.7.2"
     },
     "devDependencies": {
