--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/lodash": "^4.14.197",
         "@types/morgan": "^1.9.4",
         "@types/multer": "^1.4.7",
+        "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
@@ -38,6 +39,7 @@
     },
     "devDependencies": {
         "@eslint/create-config": "0.4.6",
+        "@types/bcrypt": "^5.0.0",
         "@typescript-eslint/eslint-plugin": "^6.7.0",
         "@typescript-eslint/parser": "^6.7.0",
         "eslint": "^8.49.0",
