--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
         "watch": "tsc -w",
         "clean": "rm -rf dist",
         "start": "node dist/index.js",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "postinstall": "husky install",
+        "prepare": "husky install",
+        "format": "prettier --cache --write .",
+        "lint": "eslint --cache --fix ."
     },
     "dependencies": {
         "@socket.io/admin-ui": "^0.5.1",
         "@socket.io/mongo-adapter": "^0.3.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.17",
         "@types/http-errors": "^2.0.1",
@@ -39,14 +44,23 @@
     },
     "devDependencies": {
         "@eslint/create-config": "0.4.6",
-        "@types/bcrypt": "^5.0.0",
-        "@typescript-eslint/eslint-plugin": "^6.7.0",
-        "@typescript-eslint/parser": "^6.7.0",
+        "@typescript-eslint/eslint-plugin": "^6.7.5",
+        "@typescript-eslint/parser": "^6.7.5",
         "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
         "nodemon": "^2.0.22",
+        "prettier": "^3.0.3",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.8",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.2.2"
+    },
+    "lint-staged": {
+        "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "yarn format",
+            "yarn lint"
+        ]
     }
 }
