--- a/package.json
+++ b/package.json
@@ -1,66 +1,71 @@
 {
-    "name": "cookie-server",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "build": "tsc -p . && tsc-alias",
-        "watch": "tsc -w",
-        "clean": "rm -rf dist",
-        "start": "node dist/index.js",
-        "dev": "nodemon",
-        "postinstall": "husky install",
-        "prepare": "husky install",
-        "format": "prettier --cache --write .",
-        "lint": "eslint --cache --fix ."
-    },
-    "dependencies": {
-        "@socket.io/admin-ui": "^0.5.1",
-        "@socket.io/mongo-adapter": "^0.3.0",
-        "@types/bcrypt": "^5.0.0",
-        "@types/cookie-parser": "^1.4.3",
-        "@types/express": "^4.17.17",
-        "@types/http-errors": "^2.0.1",
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/lodash": "^4.14.197",
-        "@types/morgan": "^1.9.4",
-        "@types/multer": "^1.4.7",
-        "bcrypt": "^5.1.1",
-        "bcryptjs": "^2.4.3",
-        "cookie-parser": "~1.4.4",
-        "debug": "~2.6.9",
-        "dotenv": "^16.0.3",
-        "express": "~4.16.1",
-        "firebase-tools": "^12.5.3",
-        "http-errors": "~1.6.3",
-        "joi": "^17.9.1",
-        "jsonwebtoken": "^9.0.0",
-        "lodash": "^4.17.21",
-        "mongodb": "^5.8.1",
-        "mongoose": "^7.0.3",
-        "morgan": "~1.9.1",
-        "multer": "^1.4.5-lts.1",
-        "pug": "^3.0.2",
-        "socket.io": "^4.7.2"
-    },
-    "devDependencies": {
-        "@eslint/create-config": "0.4.6",
-        "@typescript-eslint/eslint-plugin": "^6.7.5",
-        "@typescript-eslint/parser": "^6.7.5",
-        "eslint": "^8.49.0",
-        "eslint-config-prettier": "^9.0.0",
-        "husky": "^8.0.3",
-        "lint-staged": "^14.0.1",
-        "nodemon": "^2.0.22",
-        "prettier": "^3.0.3",
-        "ts-node": "^10.9.1",
-        "tsc-alias": "^1.8.8",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.2.2"
-    },
-    "lint-staged": {
-        "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-            "yarn format",
-            "yarn lint"
-        ]
-    }
+  "name": "cookie-server",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "build": "tsc -p . && tsc-alias",
+    "watch": "tsc -w",
+    "clean": "rm -rf dist",
+    "start": "node dist/index.js",
+    "dev": "nodemon",
+    "postinstall": "husky install",
+    "prepare": "husky install",
+    "format": "prettier --cache --write .",
+    "lint": "eslint --cache --fix ."
+  },
+  "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/mongo-adapter": "^0.3.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.197",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.5",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
+    "express": "~4.16.1",
+    "firebase-tools": "^12.5.3",
+    "http-errors": "~1.6.3",
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.0.3",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.2",
+    "socket.io": "^4.7.2",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "@eslint/create-config": "0.4.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "nodemon": "^2.0.22",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn lint"
+    ],
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "yarn format"
+    ]
+  }
 }
