feat: add firebase admin sdk support

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "firebase-admin": "^11.11.1",
     "firebase-tools": "^12.5.3",
     "http-errors": "~1.6.3",
     "joi": "^17.9.1",
