--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "~4.16.1",
     "firebase-admin": "^11.11.1",
     "firebase-tools": "^12.5.3",
+    "git-last-commit": "^1.0.1",
     "http-errors": "~1.6.3",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
